# what-is-on-my-disk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  GLOSSARY.md  LICENSE  README.md  WIZTREE_EXPERIMENT.md  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  scaffold-request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
apps/desktop/: index.html  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/src/: App.tsx  advisorClient.ts  api.ts  env.ts  format.ts  mocks.ts  store.ts  styles.css  triage.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AdvisorCard.tsx  AutoWalk.tsx  ScaffoldPanel.tsx  Settings.tsx  (+3 more)
crates/advisor/: Cargo.toml
crates/advisor/src/: lib.rs
crates/executor/: Cargo.toml
crates/executor/src/: lib.rs
crates/scaffold/: Cargo.toml
crates/scaffold-lint/: Cargo.toml
crates/scaffold-lint/src/: main.rs
crates/scaffold/src/: lib.rs
crates/scanner/: Cargo.toml
crates/scanner/src/: lib.rs  wiztree.rs
docs/: SCAFFOLD-AUTHORING.md  dev-workflow-compare.md
docs/screenshots/: README.md
scaffolds/: battlenet.toml  brave.toml  cargo.toml  chrome.toml  conda.toml  crash-dumps.toml  cursor.toml  dingtalk.toml  discord.toml  docker.toml  edge.toml  epicgames.toml  feishu.toml  firefox.toml  go-mod.toml  gradle.toml  huggingface.toml  jetbrains.toml  maven.toml  node-modules.toml  npm.toml  nuget.toml  obs.toml  ollama.toml  pip.toml  pnpm.toml  qq.toml  recycle-bin.toml  slack.toml  spotify.toml  steam.toml  teams.toml  telegram.toml  vscode.toml  wechat-pc.toml  windows-old.toml  windows-temp.toml  yarn.toml
