[workspace]
resolver = "2"
members = [
  "crates/scanner",
  "crates/scaffold",
  "crates/executor",
  "crates/advisor",
  "crates/scaffold-lint",
  "apps/desktop/src-tauri",
]

[workspace.package]
edition    = "2021"
license    = "MIT"
repository = "https://github.com/jtlyu/what-is-on-my-disk"
version    = "0.1.0"

[workspace.dependencies]
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
anyhow             = "1"
thiserror          = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir            = "2.5"
globset            = "0.4"
trash              = "5"
reqwest            = { version = "0.13", default-features = false, features = ["json", "rustls-tls"] }
tokio              = { version = "1", features = ["full"] }
once_cell          = "1"
chrono             = { version = "0.4", features = ["serde"] }
sha2               = "0.10"
dirs               = "5"
shellexpand        = "3"

[profile.release]
opt-level = 3
lto       = "thin"
strip     = true
