[package]
name        = "diskwise-scaffold-lint"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[[bin]]
name = "diskwise-scaffold-lint"
path = "src/main.rs"

[dependencies]
diskwise-scaffold = { path = "../scaffold" }
toml.workspace    = true
anyhow.workspace  = true
