[package]
name        = "diskwise-scanner"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true

[dependencies]
serde.workspace     = true
walkdir.workspace   = true
anyhow.workspace    = true
thiserror.workspace = true
tracing.workspace   = true
csv                 = "1.3"
